fix minimized panel was inexplicably too large

--- a/assembl/static/css/components/_panel.scss
+++ b/assembl/static/css/components/_panel.scss
@@ -141,7 +141,7 @@
   }
   @include z-index("float");
   height: 40px;
-  padding: 0 0 0 10px;
+  padding: 0; /* required for minimized state */
   position: relative;
   background-color: $purple3;
   color: $white;
@@ -154,10 +154,15 @@
   }
 
   .panel-header-title {
+    padding: 0 0 0 10px;
     i {
       font-size: 22px;
       color: $green;
     }
+  }
+
+  .panel-header-minimize {
+      padding: 8px;
   }
 }
 
